<resources>
    <string name="app_name">Bowen_Komal_Group1_COMP304lab5_Sec_003</string>
    <string name="patient_name">Patient Name</string>
    <string name="insert_patient">Insert Patient</string>
    <string name="text_nurse">Display Nurse</string>
    <string name="patient_id">Patient Id</string>
    <string name="nurse_name">Nurse Name</string>
    <string name="nurse_id">Nurse Id</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_page">Login Page</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="register">REGISTER</string>
    <string name="register_page">Register Page</string>
    <string name="department">Department</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_account">Create Account</string>
    <string name="back_to_login">Back to Login</string>
    <string name="register_account">Register Account</string>
    <string name="login_account">Login Account</string>
    <string name="nurseGreeting">Welcome %1$s</string>
    <string name="nurseDepartment">Department: %1$s</string>
    <string name="nursePatientCount">Total Patients: %1$d"</string>
    <string name="nurseTestCount">Total Tests: %1$d"</string>
    <string name="patients_list">Patients List</string>
    <string name="newPatient">NEW PATIENT</string>
    <string name="name">Name</string>
    <string name="room">Room</string>
    <string name="patient_info">Patient Info</string>
    <string name="patient_first_name">Patient First Name</string>
    <string name="patient_last_name">Patient Last Name</string>
    <string name="patient_department">Patient Department</string>
    <string name="patient_room">Patient Room</string>
    <string name="add_or_update">ADD or UPDATE</string>
    <string name="tests">TESTS</string>
    <string name="temperature">Temperature</string>
    <string name="bph">BPH</string>
    <string name="bpl">BPL</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="new_test">NEW TEST</string>
    <string name="test_info_for_patientname">Test Info for PatientName</string>
</resources>